tests/errors/pattern_matching/unexhaustive_match.duck
use std::io::{println};

fn main() {
    let x: String | Int = "Stringbert";
    match x {
        Int => println(""),
    }
}
